--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,34 @@
-version: '2'
+version: '3'
 services:
-  mongodb:
+  mongodb-nttdynsql:
     image: mongo
     ports:
       - "27017:27017"
-    networks:
-      mongo_net:
-        ipv4_address: 172.16.0.1
-    command: mongod --bind_ip 127.0.0.1,172.16.0.1
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGOUSER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGOPASSWORD}
+    #command: mongod --bind_ip 127.0.0.1
+    command: ["--bind_ip_all"]
   nttdynsql:
-     image: dynsql
-     ports:
+    image: nttdynsql
+    build:
+      context: .
+    ports:
       - "5000:5000"
-     environment:
-        SECRET: lJ9klQjvoKPqnMQRzaDHT4y4n6XaZ2cEF0nH73FxOoQ=
-        DTURL: https://tentantid.live.dynatrace.com
-        DTAPITOKEN: dtapitoken
-        PORT: 5000
-        #ODBC Driver Names (pyodbc.driver())
-        MSSQL: "ODBC Driver 17 for SQL Server"
-        POSTGRES: "PostgreSQL Unicode"
-        MYSQL: "MySQL ODBC 8.0 Unicode Driver"
-        ORACLE: "Oracle 19 ODBC driver"
-        MONGOHOST: '172.16.0.1:27017'
-        MONGOUSER: 'mongoadmin'
-        MONGOPASSWORD: 'secret'
-        MONGOAUTHSOURCE: 'admin'
-        MONGODATABASE: 'NTTD_Dynatrace_Advanced_SQL_Extension'
-        APSCHEDULERCOLLECTION: 'apschedulerjobs'
-     networks:
-      mongo_net:  
-     depends_on:
-      - mongodb     
-networks:
-        mongo_net:
-          driver: bridge
-          ipam:
-            config:
-            - subnet: 172.16.0.0/24
-              gateway: 172.16.0.254
+    environment:
+      - SECRET=${SECRET}
+      - DTURL=${DTURL}
+      - DTAPITOKEN=${DTAPITOKEN}
+      - PORT=${PORT}
+      - MSSQL=${MSSQL}
+      - POSTGRES=${POSTGRES}
+      - MYSQL=${MYSQL}
+      - ORACLE=${ORACLE}
+      - MONGOHOST=mongodb-nttdynsql:27017
+      - MONGOUSER=${MONGOUSER}
+      - MONGOPASSWORD=${MONGOPASSWORD}
+      - MONGOAUTHSOURCE=${MONGOAUTHSOURCE}
+      - MONGODATABASE=${MONGODATABASE}
+      - APSCHEDULERCOLLECTION=${APSCHEDULERCOLLECTION}  
+    depends_on:
+      - mongodb-nttdynsql    
